--- a/scss/component/_typography.scss
+++ b/scss/component/_typography.scss
@@ -15,6 +15,10 @@
   font-family: Athiti-Light;
   src: url(../fonts/Athiti-Light.ttf);
 }
+@font-face {
+  font-family: Athiti-Medium;
+  src: url(../fonts/Athiti-Medium.ttf);
+}
 
 @font-face {
   font-family: Athiti-ExtraLight;
