--- a/scss/component/_variables.scss
+++ b/scss/component/_variables.scss
@@ -2,6 +2,7 @@ $font-family-base: "Athiti";
 $font-family-heading: "Athiti";
 $font-family-bold: "Athiti-Bold";
 $font-family-light: "Athiti-Light";
+$font-family-medium: "Athiti-Medium";
 $font-family-Extralight: "Athiti-ExtraLight";
 $font-family-long: "Athiti";
 $font-family-daylight: "DaylightDreams";
@@ -53,7 +54,7 @@ $display-font-sizes: (
   //56
   5: 2.81rem,
   //45
-  6: 1.125rem //18,,,,,,,,,,,,,,
+  6: 1.125rem //18,,,,,,,,,,,,,,,
 );
 
 $link-decoration: none;
