--- a/scss/section/_navbar.scss
+++ b/scss/section/_navbar.scss
@@ -98,7 +98,7 @@
     font-size: 1.25em;
     line-height: 0.05em;
     vertical-align: -0.075em;
-    color: $primary;
+    color: #000;
   }
 
   &:focus {
