--- a/scss/component/_variables.scss
+++ b/scss/component/_variables.scss
@@ -22,7 +22,7 @@ $black: #000;
 $red: #e20e37;
 $blue: #00b8fa;
 $yellow: #f2ac3c;
-$primary: $red;
+$primary: #dbb383;
 $secondary: $blue;
 
 $body-color: #6e7280;
@@ -54,7 +54,7 @@ $display-font-sizes: (
   //56
   5: 2.81rem,
   //45
-  6: 1.125rem //18,,,,,,,,,,,,,,
+  6: 1.125rem //18,,,,,,,,,,,,,,,,
 );
 
 $link-decoration: none;
