--- a/scss/section/_footer.scss
+++ b/scss/section/_footer.scss
@@ -1,5 +1,6 @@
 footer {
   padding-block: 2rem;
+  width: 100%;
 }
 .nav-footer {
   font-size: $smaller-font-size;
@@ -61,11 +62,11 @@ footer {
     background: #fff;
     border-radius: 50%;
     box-shadow: 0px 6px 16px #93614724;
-    width: 3rem;
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3rem;
+
     margin-right: 1rem;
     img {
       margin: 0;
@@ -76,8 +77,11 @@ footer {
 .footer-mn .social-container {
   list-style: none;
   display: flex;
-  justify-content: center;
-  margin: 0 2rem;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+
+    margin: 0 2rem;
+  }
   padding: 0;
 }
 
@@ -117,5 +121,11 @@ footer {
       display: block;
       margin: auto;
     }
+  }
+}
+
+.footer-logo {
+  @media screen and (max-width: 768px) {
+    max-width: 7rem;
   }
 }
