--- a/scss/section/_navbar.scss
+++ b/scss/section/_navbar.scss
@@ -195,7 +195,7 @@
     border-top: 1px solid $bg-s-light;
     margin-top: 0.6rem;
     padding-bottom: 2rem;
-    background-color: rgba($bg-s-light, 0.95);
+    background-color: #dbb383 !important;
   }
 
   .copyright {
@@ -328,5 +328,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+
+#menu-main-menu {
+  .nav-link {
+    @media screen and (max-width: 768px) {
+      color: #fff;
+    }
+  }
+}
+
+.header-social,
+.woocommerce-nav {
+  @media screen and (max-width: 768px) {
+    padding-left: 1rem;
+  }
+}
+
+.header-social {
+  @media screen and (max-width: 768px) {
+    margin-top: 1rem;
   }
 }
