--- a/scss/section/_navbar.scss
+++ b/scss/section/_navbar.scss
@@ -351,3 +351,19 @@
     margin-top: 1rem;
   }
 }
+
+.fixednav {
+  & > nav {
+    background: #fff;
+  }
+
+  .header-social li a {
+    color: #3e4352;
+  }
+  svg path {
+    stroke: #3e4352;
+  }
+  .woocommerce-nav li {
+    border: 2px solid #3e4352;
+  }
+}
