--- a/scss/section/_navbar.scss
+++ b/scss/section/_navbar.scss
@@ -48,7 +48,9 @@
 
 .search-box {
   max-width: 22.5rem;
-  margin: auto;
+  @media screen and (min-width: 1400px) {
+    margin: auto;
+  }
   position: relative;
   transition: all 0.3s;
 
