--- a/scss/ryan/_custom.scss
+++ b/scss/ryan/_custom.scss
@@ -1,4 +1,4 @@
-.product-tri img{
+/* .product-tri img{
     &.can-1.slideUp{
         transform: translateY(-100%);
         opacity: 0;
@@ -24,3 +24,4 @@
     }
 }
 
+ */
