--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -22,11 +22,11 @@ h1 {
 
 .add-to-cart {
   text-transform: uppercase;
-  padding: 0.8rem 3rem 0.8rem 5rem;
   box-shadow: 0px 6px 16px #5e5f5f15;
   font-family: "Athiti-Bold";
   background: #ffff;
   position: relative;
+  /* padding: 0.8rem 3rem 0.8rem 5rem;
   &:before {
     content: "";
     position: absolute;
@@ -40,7 +40,7 @@ h1 {
     transform: translate(-340%, -50%);
     left: 50%;
     top: 50%;
-  }
+  } */
 }
 
 .add-to-cart.blue {
