--- a/scss/ryan/_custom.scss
+++ b/scss/ryan/_custom.scss
@@ -59,6 +59,10 @@
         object-fit: contain;
     }
 }
+
+.bg-light-c {
+    background-color: #F9F9FC;
+}
 @media screen and (min-width: 768px){
     .product-container {    
         p {
