--- a/scss/scott/_custom.scss
+++ b/scss/scott/_custom.scss
@@ -36,6 +36,10 @@
   bottom: 0;
 
   transform: translate(-60%, 10%);
+  @media screen and (max-width: 1400px) {
+    transform: translate(-60%, 10%);
+    width: 17rem;
+  }
   @media screen and (max-width: 768px) {
     width: 12rem;
     transform: translate(50%, 10%);
@@ -45,6 +49,7 @@
   }
 }
 .banner-left-wrap {
+  margin-right: 7rem;
   h4 {
     font-family: "Athiti-Light";
     color: #dbb383;
@@ -84,7 +89,9 @@
 
 .tropical-fruited {
   h3 {
-    letter-spacing: 20px;
+    @media screen and (min-width: 1400px) {
+      letter-spacing: 20px;
+    }
     font-family: "Athiti-ExtraLight";
     font-size: 3rem;
     text-transform: uppercase;
@@ -204,7 +211,7 @@
     img {
       width: 1rem;
       height: 1rem;
-      margin-right: 1rem;
+      margin-right: 0.5rem;
     }
   }
 }
