--- a/scss/scott/_custom.scss
+++ b/scss/scott/_custom.scss
@@ -396,3 +396,39 @@
     text-transform: uppercase;
   }
 }
+
+#stores {
+  padding-top: 2rem;
+  @media screen and (min-width: 1400px) {
+    padding-top: 10rem;
+  }
+}
+body {
+  .wp-pagenavi {
+    width: auto;
+    margin-bottom: 5rem;
+    a {
+      padding: 0.5rem;
+      border: #3e4852 1px solid;
+
+      line-height: 0.7;
+      color: #3e4852;
+      border: 1px solid #bfbfbf;
+      padding: 3px 5px;
+      margin-right: 1rem;
+    }
+    span {
+      border: 1px solid #bfbfbf;
+      padding: 3px 5px;
+      margin: 2px;
+    }
+    .current {
+      padding: 0.5rem;
+      border: #3e4852 1px solid;
+      margin-right: 1rem;
+      line-height: 0.7;
+      background-color: #3e4852;
+      color: #fff;
+    }
+  }
+}
