--- a/scss/ryan/_custom.scss
+++ b/scss/ryan/_custom.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .font-extralight {
-    font-family: "Atithi-ExtraLight";
+    font-family: "Athiti-ExtraLight";
 }
 
 .wp-pagenavi {
@@ -146,6 +146,8 @@ div.btn-wrap>a {
 }
 
 .btn {
+    font-size: 1rem;
+    font-family: "Athiti-Medium";
     border-radius: 0;
     box-shadow: 0px 6px 16px #47599324;
 }
