--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -291,7 +291,7 @@ body .collection .h3 {
 .bi-navbar .nav-item.active .nav-link::before {
   content: "";
   width: 60%;
-  border-bottom: 4px solid #e20e37;
+  border-bottom: 4px solid #dbb383;
   height: 7px;
 }
 
