--- a/scss/component/_variables.scss
+++ b/scss/component/_variables.scss
@@ -21,8 +21,8 @@ $white: #fff;
 $black: #000;
 $red: #e20e37;
 $blue: #00b8fa;
-$yellow: #f2ac3c;
-$primary: $red;
+$yellow: #dbb383;
+$primary: $yellow;
 $secondary: $blue;
 
 $body-color: #6e7280;
@@ -54,7 +54,7 @@ $display-font-sizes: (
   //56
   5: 2.81rem,
   //45
-  6: 1.125rem //18,,,,,,,,,,,,,,,
+  6: 1.125rem //18,,,,,,,,,,,,,,,,,,,,
 );
 
 $link-decoration: none;
